module(name = "ecsact_rt_reference")

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "ecsact_runtime")
bazel_dep(name = "ecsact_codegen")

git_override(
    module_name = "ecsact_codegen",
    remote = "https://github.com/ecsact-dev/ecsact_codegen",
    commit = "d947cb8bef1c488d814dc2b43bd4a0ab982572cd",
)
