module(
    name = "ecsact_rt_reference",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "ecsact_runtime", version = "0.5.4")
bazel_dep(name = "ecsact_codegen", version = "0.1.3")
bazel_dep(name = "ecsact_lang_cpp", version = "0.3.1")
bazel_dep(name = "rules_ecsact", version = "0.4.7")
bazel_dep(name = "ecsact_cli", version = "0.2.3")
bazel_dep(name = "bazel_skylib", version = "1.4.2")

# not in BCR yet
bazel_dep(name = "yaml-cpp")
git_override(
    module_name = "yaml-cpp",
    commit = "37f1b8b8c9e5172ff3a79a3d5fdbb87f2994842b",
    remote = "https://github.com/jbeder/yaml-cpp",
)

register_toolchains("@ecsact_cli//:all")
