module(
    name = "ecsact_rt_reference",
    version = "0.1.2",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "ecsact_runtime", version = "0.8.0")

# NOTE: I don't know why this is necessary. The compatibility error is very unclear.
# Possibly due to this? https://github.com/bazelbuild/bazel/issues/22972
single_version_override(
    module_name = "ecsact_runtime",
    version = "0.8.0",
)

bazel_dep(name = "ecsact_codegen", version = "0.4.4")
bazel_dep(name = "ecsact_lang_cpp", version = "0.4.11")
bazel_dep(name = "rules_ecsact", version = "0.5.9")
bazel_dep(name = "ecsact_cli", version = "0.3.23")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

bazel_dep(name = "docopt.cpp", version = "0.6.2")

git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact", dev_dependency = True)
ecsact.toolchain(use_ecsact_cli = True)
use_repo(ecsact, "ecsact_toolchain")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    "@ecsact_toolchain//:all",
    dev_dependency = True,
)
