load("@rules_cc//cc:defs.bzl", "cc_library")
load("@ecsact_runtime//bazel:copts.bzl", "copts")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_build_recipe")

package(default_visibility = ["//visibility:public"])

ecsact_build_recipe(
    name = "async_reference_build_recipe",
    srcs = [
        ":sources",
    ],
    exports = [
        "ecsact_async_connect",
        "ecsact_async_disconnect",
        "ecsact_async_flush_events",
        "ecsact_async_enqueue_execution_options",
        "ecsact_async_get_current_tick",
    ],
    imports = [
        "ecsact_execute_systems",
        "ecsact_get_component",
        "ecsact_serialize_action_size",
        "ecsact_serialize_component_size",
        "ecsact_serialize_action",
        "ecsact_deserialize_action",
        "ecsact_serialize_component",
        "ecsact_deserialize_component",
    ]
)

alias(
    name = "async_reference",
    actual = ":async_reference_build_recipe",
)

# exports_files([
#     "async_reference.hh",
#     "async_reference.cc",
#     "async.cc",
# ])

# cc_library(
#     name = "async_reference",
#     srcs = ["async_reference.cc"],
#     hdrs = ["async_reference.hh"],
#     copts = copts,
#     linkstatic = True,
#     visibility = ["//visibility:public"],
#     deps = [
#         "@ecsact_runtime//:async",
#         "@ecsact_runtime//:core",
#         "//async_reference/callbacks:async_callbacks",
#         "//async_reference/callbacks:execution_callbacks",
#         "//async_reference/detail/c_execution_options",
#         "//async_reference/request_id_factory",
#         "//async_reference/tick_manager",
#         "//async_reference/util",
#         "//async_reference/util:types",
#     ],
# )

# cc_library(
#     name = "async",
#     srcs = ["async.cc"],
#     copts = copts,
#     defines = ["ECSACT_ASYNC_API_EXPORT="],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":async_reference",
#         "@ecsact_runtime//:async",
#     ],
# )

filegroup(
    name = "sources",
    srcs = glob([
        "**/*.cc",
        "**/*.hh",
    ]) + [
        "//async_reference/callbacks:callback_source",
        "//async_reference/detail/c_execution_options:c_execution_source",
        "//async_reference/tick_manager:tick_source",
        "//async_reference/util:util_source",
        "//async_reference/request_id_factory:sources",
    ],
    visibility = ["//visibility:public"],
)
