module(name = "ecsact_rt_reference_test")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "ecsact_rt_reference")
bazel_dep(name = "ecsact_codegen", version = "0.1.3")

local_path_override(
    module_name = "ecsact_rt_reference",
    path = "..",
)

local_path_override(
    module_name = "ecsact_cli",
    path = "../../ecsact_cli",
)
local_path_override(
    module_name = "rules_ecsact",
    path = "../../rules_ecsact",
)

# git_override(
#     module_name = "ecsact_codegen",
#     commit = "d947cb8bef1c488d814dc2b43bd4a0ab982572cd",
#     remote = "https://github.com/ecsact-dev/ecsact_codegen",
# )

# not in BCR yet
bazel_dep(name = "yaml-cpp")
bazel_dep(name = "ecsact_runtime", version = "0.5.4")
bazel_dep(name = "rules_ecsact", version = "0.4.6")
bazel_dep(name = "ecsact_cli", version = "0.2.3")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")

git_override(
    module_name = "yaml-cpp",
    commit = "37f1b8b8c9e5172ff3a79a3d5fdbb87f2994842b",
    remote = "https://github.com/jbeder/yaml-cpp",
)
