module(name = "ecsact_rt_reference_test")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "ecsact_lang_cpp", version = "0.4.7")
bazel_dep(name = "ecsact_runtime", version = "0.6.7")
bazel_dep(name = "rules_ecsact", version = "0.5.6")
bazel_dep(name = "ecsact_cli", version = "0.3.16")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
bazel_dep(name = "ecsact_rt_reference")

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

local_path_override(
    module_name = "ecsact_rt_reference",
    path = "..",
)

git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

git_override(
    module_name = "ecsact_runtime",
    commit = "9dcfb4bc18baf4cbaddc7124f02830a424945a64",
    remote = "https://github.com/ecsact-dev/ecsact_runtime.git",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact", dev_dependency = True)
ecsact.toolchain(use_ecsact_cli = True)
use_repo(ecsact, "ecsact_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    "@ecsact_toolchain//:all",
    dev_dependency = True,
)
