load("@rules_cc//cc:defs.bzl", "cc_library")
load("@ecsact_runtime//bazel:copts.bzl", "copts")

cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.hh"],
    copts = copts,
    local_defines = [
        "ECSACT_CORE_API=",
        "ECSACT_SERIALIZE_API=",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:core",
        "//:serialize",
        "//async_reference/detail/c_execution_options",
        "//async_reference/util:types",
        "//serialize_reference",
    ],
)

cc_library(
    name = "types",
    hdrs = ["types.hh"],
    copts = copts,
    local_defines = [
        "ECSACT_CORE_API=",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:async",
        "//:core",
    ],
)

filegroup(
    name = "util_source",
    srcs = glob([
        "**/*.hh",
        "**/*.cc",
    ]),
    visibility = [
        "//async_reference:__pkg__",
    ],
)
