load("@ecsact_lang_cpp//:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "serialize_reference_codegen",
    srcs = ["serialize_reference_codegen.cc"],
    copts = copts,
    output_extension = "serialize_reference.cc",
    deps = [
        "@ecsact_lang_cpp//:support",
    ],
)

alias(
    name = "codegen",
    actual = ":serialize_reference_codegen",
)
