load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_codegen")
load("@ecsact_runtime//bazel:copts.bzl", "copts")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_binary")

ecsact_binary(
    name = "serialize",
    recipes = ["@ecsact_rt_reference//serialize_reference"],
    srcs = ["serialize_test.ecsact"],
)
