load("@ecsact_runtime//bazel:copts.bzl", "copts")
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "c_execution_options",
    srcs = ["c_execution_options.cc"],
    hdrs = ["c_execution_options.hh"],
    copts = copts,
    local_defines = [
        "ECSACT_CORE_API=",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@ecsact_runtime//:common",
    ],
)

filegroup(
    name = "c_execution_source",
    srcs = glob([
        "**/*.hh",
        "**/*.cc",
    ]),
    visibility = [
        "//async_reference:__pkg__",
    ],
)
